# rust-grpc-diesel-poc

./: Cargo.toml  README.md  build.rs  diesel.toml  start_db_in_docker.sh
conf/: default.toml
migrations/2024-12-24-191917_create_users_table/: up.sql
migrations/2024-12-24-195143_add_country_to_users/: down.sql  up.sql
proto/: account-service.proto  order-service.proto
proto/account-service/: account-service.proto  error.proto  request.proto  response.proto
proto/order-service/: error.proto  order-service.proto  order.proto  request.proto  response.proto
src/: account_service_handler.rs  config.rs  database.rs  grpc_server.rs  main.rs  metrics_server.rs  order_service_handler.rs  schema.rs
src/account_service/: account_repository.rs  mod.rs  models.rs  request_handler.rs
src/order_service/: mod.rs  request_handler.rs
