[package]
name = "rust-grpc-diesel-poc"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12.3"
tonic-health = "0.12.3"
tonic-reflection = "0.12.3"
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros", "signal"] }
prost = "0.13.4"
env_logger = "0.11.6"
log = "0.4.22"
lazy_static = "1.4"
prometheus = "0.13.4"
hyper = { version = "^0.14", features = ["server", "http1", "tcp"] }
serde = "1.0.216"
serde_derive = "1.0.216"
toml = "0.8.19"
clap = { version = "4.5.23", features = ["derive"] }
#hyper = { version = "1.5.2", features = ["server", "http1"] }
diesel = { version = "2.2.6", features = ["postgres"] }
diesel_migrations = "2.2.0"
dotenvy = "0.15"

[build-dependencies]
tonic-build = "0.12.3"
